Revert "Finalised Kubernetes install"
This reverts commit 5212a935de9522096375c2b466811a1e9bfa3d59.

--- a/config.toml
+++ b/config.toml
@@ -1,30 +1,4 @@
-baseURL = 'https://dizikloud.ml/'
+baseURL = 'http://example.org/'
 languageCode = 'en-us'
-title = 'Techie Knowledgebase'
-# Change the default theme to be use when building the site with Hugo
+title = 'My New Hugo Site'
 theme = "hugo-geekdoc"
-
-pluralizeListTitles = false
-
-# Geekdoc required configuration
-pygmentsUseClasses = true
-pygmentsCodeFences = true
-disablePathToLower = true
-
-# Required if you want to render robots.txt template
-enableRobotsTXT = true
-
-# Needed for mermaid shortcodes
-[markup]
-  [markup.goldmark.renderer]
-    # Needed for mermaid shortcode
-    unsafe = true
-  [markup.tableOfContents]
-    startLevel = 1
-    endLevel = 9
-
-[taxonomies]
-   tag = "tags"
-
-geekdocSearch = false
-geekdocAnchor = false
